Document library usage in README